Add background tab text colors for inactive and incognito windows.

With the default behavior of Chrome being to not show a tab background, we want
to change themes to default to that as well, unless the theme author actually
supplies an image/color for this explicitly.  To do this, we need to support
different tab text colors for the cases where the frame colors can vary.  This
adds the framework for that support.

Right now, the default is to use the same text colors in inactive windows as
active ones.

This also gives themes that want normal and incognito windows to differ greatly
(as the built-in theme's does) the ability to implement that and still have
readable tab titles.

Bug: 866672
Change-Id: I032a72bc799d0675c517db10283513a30db23328
Reviewed-on: https://chromium-review.googlesource.com/1152418
Commit-Queue: Peter Kasting <pkasting@chromium.org>
Reviewed-by: Evan Stade <estade@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578807}
Former-commit-id: 3b7859cbe2547755a07abf56251808959f51a91e